# nandatown

./: .gitignore  .pre-commit-config.yaml  .railwayignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-feedback.yml  ci.yml
apps/nest-dashboard/: next.config.ts  nixpacks.toml  package-lock.json  package.json
apps/nest-dashboard/public/: hackathon-data.json
apps/nest-dashboard/public/guides/: index.html
apps/nest-dashboard/public/guides/demo/: index.html
apps/nest-dashboard/public/guides/skillmd/: index.html
apps/nest-dashboard/public/onboarding/: index.html
apps/nest-dashboard/public/onboarding/companies/: index.html
apps/nest-dashboard/public/onboarding/individuals/: index.html
apps/nest-dashboard/public/onboarding/startups/: index.html
apps/nest-dashboard/public/onboarding/submit/: index.html
apps/nest-dashboard/public/showcase/: index.html
apps/nest-dashboard/public/showcase/admin/: index.html
apps/nest-dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/nest-dashboard/src/app/agents/: page.tsx
apps/nest-dashboard/src/app/api/showcase/: route.ts
apps/nest-dashboard/src/app/api/skills/: route.ts
apps/nest-dashboard/src/app/docs/: page.tsx
apps/nest-dashboard/src/app/experiments/: page.tsx
apps/nest-dashboard/src/app/hackathon/: page.tsx
apps/nest-dashboard/src/app/hackathon/layers/: page.tsx
apps/nest-dashboard/src/app/hackathon/layers/[layer]/: layer-submissions.tsx  page.tsx
apps/nest-dashboard/src/app/hackathon/submissions/[id]/: page.tsx
apps/nest-dashboard/src/app/leaderboard/: page.tsx
apps/nest-dashboard/src/app/skills/: actions.ts  page.tsx  submit-form.tsx
apps/nest-dashboard/src/app/summit/: page.tsx
apps/nest-dashboard/src/app/uploads/[name]/: route.ts
apps/nest-dashboard/src/app/visualizer/: page.tsx
apps/nest-dashboard/src/components/: footer.tsx  hackathon-banner.tsx  hackathon-card.tsx  hackathon-faq.tsx  hackathon-phases.tsx  navbar.tsx
apps/nest-dashboard/src/lib/: db.ts  demo-data.ts  hackathon-event.ts  hackathon-types.ts  hackathon.ts  skills.ts
config/: consensus.yaml
data/hackathon-runs/: .gitkeep
docs/: README.md  concepts.md  quickstart.md  saurabhvmagdum_bft_quorum.md  writing-a-plugin.md  writing-a-scenario.md
docs/hackathon/: charter.md  judging.md  scores.json
docs/hackathon/problems/: 01-comms-schema-versioning.md  02-memory-crdt-lww.md  03-payments-streaming-x402.md  04-auth-capability-delegation.md  05-identity-ed25519-key-rotation.md  06-registry-gossip-eventual-consistency.md  07-negotiation-multi-attribute.md  08-datafacts-content-addressed.md  09-privacy-hybrid-encryption-with-selective-disclosure.md  10-coordination-bft-partition-tolerant.md
docs/hackathon/protocols/: implementation.md  nanda_quorum.md
docs/layers/: auth.md  communication.md  coordination.md  datafacts.md  identity.md  memory.md  negotiation.md  payments.md  privacy.md  registry.md  transport.md  trust.md  trust_gated_privacy.md
examples/full-stack-swap/: README.md
examples/new-coordination/: README.md
examples/new-payment-protocol/: README.md
scenarios/: attested_peering.yaml  auction.yaml  bft_consensus_byzantine.yaml  bft_consensus_partition.yaml  comms_downgrade_attack.yaml  comms_versioning.yaml  consensus.yaml  delegated_auth.yaml  empic_payments.yaml  empic_payments_partition.yaml  escrow_marketplace.yaml  failure_detection.yaml  gossip_byzantine_forgery.yaml  gossip_eclipse.yaml  gossip_signed_equivocation.yaml  identity_rotation.yaml  marketplace.yaml  multi_attribute_market.yaml  parc_migration.yaml  provenance_supply_chain.yaml  quorum_baseline.yaml  quorum_byzantine.yaml  quorum_drops.yaml  quorum_stress.yaml  rogue_trusted_agent.yaml  saurabhvmagdum_bft_quorum_byzantine.yaml  saurabhvmagdum_bft_quorum_partition.yaml  sealed_bid_with_privacy.yaml  shell_marketplace.yaml  streaming_payments.yaml  streaming_payments_partition.yaml  trust_gated_exchange.yaml  voting.yaml
scripts/: conftest.py  run_quorum_tests.py
scripts/harness/: README.md  SCHEMA.md  __init__.py  _calibration.py  agent_runner.py  analyze.py  collect.py  conditions.py  conditions.yaml  run_condition.py
scripts/harness/briefs/: layer-enumerated.md  open-problems.md  vague.md
scripts/harness/dry_run/: __init__.py  test_dry_run.py
scripts/harness/dry_run/fixtures/: identity_green.json  memory_red_then_green.json  registry_failure.json  trust_green.json  trust_red.json
scripts/judge/: README.md  __init__.py  judge_pr.py  rubric.md  run_all.py
scripts/judge/fixtures/: hackathon-prs-2026-05-26.json
scripts/judge/tests/: __init__.py  test_judge.py
src/: __init__.py
src/consensus/: __init__.py  leader.py  messages.py  metrics.py  network.py  node.py  quorum.py  quorum_consensus.py  quorum_consensus_scenario.py
templates/agents/: auction-auctioneer.yaml  auction-bidder.yaml  consensus-follower.yaml  consensus-leader.yaml  marketplace-buyer.yaml  marketplace-seller.yaml  reputation-honest.yaml  reputation-malicious.yaml  reputation-observer.yaml  supply-chain-distributor.yaml  supply-chain-manufacturer.yaml  supply-chain-retailer.yaml  supply-chain-supplier.yaml  voting-coordinator.yaml  voting-proposer.yaml  voting-voter.yaml
tests/: test_consensus.py
