# SPDX-License-Identifier: Apache-2.0
[project]
name = "nest-workspace"
version = "0.1.0"
description = "NEST — Network Environment for Swarm Testing: a discrete-event simulator and SDK for multi-agent system research"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "nest-core",
    "nest-sdk",
    "nest-mocks",
    "nest-scenarios",
    "nest-shell",
    "nest-plugins-reference",
]

[project.urls]
Homepage = "https://github.com/mariagorskikh/nest"
Repository = "https://github.com/mariagorskikh/nest"

[tool.uv.workspace]
members = [
    "packages/nest-core",
    "packages/nest-sdk",
    "packages/nest-cli",
    "packages/nest-mocks",
    "packages/nest-scenarios",
    "packages/nest-shell",
    "packages/nest-plugins-reference",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1",
    # nest-cli is a deprecated shim — only installed for the dev test suite
    # so the shim's smoke tests can import it.
    "nest-cli",
]

[tool.uv.sources]
nest-core = { workspace = true }
nest-sdk = { workspace = true }
nest-cli = { workspace = true }
nest-mocks = { workspace = true }
nest-scenarios = { workspace = true }
nest-shell = { workspace = true }
nest-plugins-reference = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003", "A002"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = [
    "packages/nest-core",
    "packages/nest-sdk",
    "packages/nest-cli",
    "packages/nest-mocks",
    "packages/nest-scenarios",
    "packages/nest-shell",
    "packages/nest-plugins-reference",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = ["--import-mode=importlib"]
