# SPDX-License-Identifier: Apache-2.0
[project]
name = "nest-workspace"
version = "0.1.0"
description = "Nanda Town: a discrete-event simulator and SDK for multi-agent system research"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "nest-core",
    "nest-sdk",
    "nest-mocks",
    "nest-scenarios",
    "nest-shell",
    "nest-plugins-reference",
    "nest-marketplace",
]

[project.optional-dependencies]
# Dependencies for the hackathon judge panel under scripts/judge/.
# Install with: uv sync --extra judge
# or install a single provider directly: uv pip install "anthropic>=0.30"
# / "openai>=1.0". The judge_pr module imports providers lazily, so a
# missing SDK only fails at the point a live judge is invoked.
judge = [
    "anthropic>=0.30",
    "openai>=1.0",
]
# Optional extras: the `harness` extra adds plotting deps for analyze.py.
# Keeping it optional means the core repo (and CI) stays matplotlib-free.
harness = [
    "matplotlib>=3.8",
    "PyYAML>=6.0",
]
# Real-crypto extras for identity/auth/privacy plugins that need them.
# `cryptography` powers the `ed25519_rotating` identity plugin (RFC 8032).
# It is also declared as a hard dependency of `nest-plugins-reference`, so a
# bare `uv sync` already installs it; this extra documents the requirement
# per the hackathon problem brief.
plugins = [
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/projnanda/nandatown"
Repository = "https://github.com/projnanda/nandatown"

[tool.uv.workspace]
members = [
    "packages/nest-core",
    "packages/nest-sdk",
    "packages/nest-cli",
    "packages/nest-mocks",
    "packages/nest-scenarios",
    "packages/nest-shell",
    "packages/nest-plugins-reference",
    "packages/nest-marketplace",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.4",
    # Pinned to match local dev: newer pyright is stricter about typer's
    # dynamic Argument/Option typing and breaks CI without code changes.
    "pyright>=1.1.400,<1.1.410",
    # nest-cli is a deprecated shim — only installed for the dev test suite
    # so the shim's smoke tests can import it.
    "nest-cli",
]

[tool.uv.sources]
nest-core = { workspace = true }
nest-sdk = { workspace = true }
nest-cli = { workspace = true }
nest-mocks = { workspace = true }
nest-scenarios = { workspace = true }
nest-shell = { workspace = true }
nest-plugins-reference = { workspace = true }
nest-marketplace = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003", "A002"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = [
    "packages/nest-core",
    "packages/nest-sdk",
    "packages/nest-cli",
    "packages/nest-mocks",
    "packages/nest-scenarios",
    "packages/nest-shell",
    "packages/nest-plugins-reference",
    "packages/nest-marketplace",
    ".",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "scripts"]
addopts = ["--import-mode=importlib", "-m", "not live"]
pythonpath = ["."]
markers = [
    "live: end-to-end tests that hit live external services (skipped by default)",
]
